back to /inpe as baseurl

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,6 @@
 name: inpe
 markdown: kramdown
-baseurl: inpe.opencare.cc
+baseurl: /inpe
 permalink: /blog/:year/:month/:day/:title/
 gems:
   - jekyll-sitemap
