create dictionary key for video URL

--- a/_data/en/lang.yml
+++ b/_data/en/lang.yml
@@ -2,19 +2,19 @@
 
 
 # ------------------------------
-# --- GLOBAL dictionary keys --- 
+# --- GLOBAL dictionary keys ---
 # ------------------------------
 global:
   read_more: "Read more"
   read_more_post: "Read more"
 
 # ----------------------------------
-# --- NAVIGATION dictionary keys --- 
+# --- NAVIGATION dictionary keys ---
 # ----------------------------------
 # project_logo: "<img src='../assets/OC-logo-breathinggames.svg'>"
 
 # ---------------------------------
-# --- HOME page dictionary keys --- 
+# --- HOME page dictionary keys ---
 # ---------------------------------
 # dictionary keys for homeheader.html include file
 header:
@@ -34,6 +34,7 @@ description: "some text"
 # dictionary keys for video.html include file
 video:
   title: "video english title"
+  url: "https://www.youtube.com/embed/z6lobpiFeiU"
   description: "english description"
   link: "about"
 
@@ -126,7 +127,7 @@ contribute:
 
 
 # ------------------------------
-# --- FOOTER dictionary keys --- 
+# --- FOOTER dictionary keys ---
 # ------------------------------
 # dictionary keys for footer.html include file
 footer:
@@ -135,7 +136,7 @@ footer:
 
 
 # --------------------------------
-# --- CATEGORY dictionary keys --- 
+# --- CATEGORY dictionary keys ---
 # --------------------------------
 # dictionary keys for category.html & post.html layout files
 category:
@@ -145,7 +146,7 @@ category:
 
 
 # ----------------------------
-# --- BLOG dictionary keys --- 
+# --- BLOG dictionary keys ---
 # ----------------------------
 # dictionary keys for blog/index.html file
 # pagination:
@@ -153,5 +154,3 @@ category:
 #   previous: "Previous"
 #   page_1: "Page"
 #   page_2: "of"
-
-  
