--- a/_data/en/lang.yml
+++ b/_data/en/lang.yml
@@ -116,7 +116,7 @@ credits:
                         <br><br>
                         This project has received funding from the European Union's Horizon 2020 research and innovation programme under grant agreement No 688670.
                         <br><br>
-                        Got questions? Leave a comment below or get in touch <a href='mailto:opencare@wemake.cc?subject=In Pe' info request'>here</a>"
+                        Got questions? Leave a comment below or get in touch <a href='mailto:opencare@wemake.cc?subject=InPe info request'>here</a>"
 
 # dictionary keys for contribute.html include file
 contribute:
